--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="content">
       <!--animation by Shinsuke Matsumoto in Walking Guys on Nov 24, 2014 | https://dribbble.com/shots/1820812-Fat-Boy-Walking-gifhttps://dribbble.com/shots/1697984-Going-for-a-Spin-->
       <div id="run"></div>
-      <h2 id="title">Calcule seu IMC</h2>
+      <h2 id="title">Calcule su IMC</h2>
       <input id="peso" type="text" placeholder="peso (##.#)" /><br />
       <input id="altura" type="text" placeholder="altura (#.##)" /><br />
       <input type="button" value="CALCULAR" onclick="calc()" /><br />
