--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <input type="button" value="CALCULAR" onclick="calc()" /><br />
       <div id="message"></div>
     </div>
-
+      
+      <script src="./javascript/scripts.js"></script>
+      
   </body>
 </html>
