--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>IMC Calc</title>
       
-        <link href=".css/styles.css" rel="stylesheet" />
+       <link href="css/styles.css" rel="stylesheet" />
     </head>
   <body>
     <div id="content">
