--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>IMC Calc</title>
+        <title>IMC Calculadora</title>
       
        <link href="css/styles.css" rel="stylesheet" />
     </head>
