--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="message"></div>
     </div>
       
-      <script src="js/scripts.js"></script>
+      <script src=".js/scripts.js"></script>
       
   </body>
 </html>
